#3532 fixes for See item percept documentation

--- a/UT2004EnvironmentManual/src/main/resources/UT Environment Manual.tex
+++ b/UT2004EnvironmentManual/src/main/resources/UT Environment Manual.tex
@@ -1115,7 +1115,7 @@ Parameters &
 \verb|<UnrealID>|: The UnrealID of this item.\\
 & \verb|<Label>|: The category of the pick up, useful for prioritizing.\\
 & \verb|<ItemType>|: The actual item type of the item located on the pickup. \\
-& \verb|<Position>|: The x,y,z coordinates of the item as a location(x,y,z) or the UnrealID of a navpoint if the item is spawned on one.\\
+& \verb|<Position>|: the UnrealID where the item is located, or the x,y,z coordinates of the item as a location(x,y,z) if the item is not at a navpoint (e.g., it was dropped).\\
 Notes &
 	1.	A full over view of which category Label belongs to which item type.
 \end{tabular}
