#3870 pickup/1 percept fixed: it reports only navpoints with an item available for pickup. Docu also fixed accordingly.

--- a/UT2004EnvironmentManual/src/main/resources/UT Environment Manual.tex
+++ b/UT2004EnvironmentManual/src/main/resources/UT Environment Manual.tex
@@ -1196,13 +1196,10 @@ Parameters &
 \subsubsection*{See Pickup percept}
 \begin{small}
 \begin{tabular}{p{2cm}p{9cm}}
-Description & Information about point in the map the bot can see.\\
+Description & Currently visible navpoint that has a ready-to-pick-up item.\\
 Type & On change with negation.\\
 Syntax & \verb|pickup(<UnrealID>)|\\
-Parameters & \verb|<UnrealID>|: The the unique ID for the navpoint this pickup is located on.\\
-
-Notes &
-	1.	The See Navpoint percept is provided when ever the bot can see a navpoint that has a pickup on it. This allows you to confirm if an item has been picked up or not. If you see the navpoint, but not the item, the item has been picked up. \\
+Parameters & \verb|<UnrealID>|: The unique ID for the navpoint this pickup is located on.\\
 \end{tabular}
 \end{small}
 
