#3532 "invisiblity" typo fix

--- a/UT2004EnvironmentManual/src/main/resources/UT Environment Manual.tex
+++ b/UT2004EnvironmentManual/src/main/resources/UT Environment Manual.tex
@@ -1033,7 +1033,7 @@ health & \verb|health|, \verb|mini_health|, \verb|super_health| & \verb|medium_v
 armor & \verb|small_armor|, \verb|super_armor| & \verb|armor_shield_belt|, \verb|armor_vest|, \verb|armor_helmet|, \verb|armor_thighpads|\\
 adrenaline & \verb|adrenaline| & none\\
 deployable & none & \verb|slow_volume|\\
-other & \verb|udamage| & \verb|weapon_locker|, \verb|jump_boots|, \verb|invulnerability|, \verb|berserk|, \verb|udamage|, \verb|invisiblity| \\
+other & \verb|udamage| & \verb|weapon_locker|, \verb|jump_boots|, \verb|invulnerability|, \verb|berserk|, \verb|udamage|, \verb|invisibility| \\
  \hline
 \end{tabular}
 \end{small}
@@ -1131,7 +1131,7 @@ health & \verb|health|, \verb|mini_health|, \verb|super_health| & \verb|medium_v
 armor & \verb|small_armor|, \verb|super_armor| & \verb|armor_shield_belt|, \verb|armor_vest|, \verb|armor_helmet|, \verb|armor_thighpads|\\
 adrenaline & \verb|adrenaline| & none\\
 deployable & none & \verb|slow_volume|\\
-other & \verb|udamage| & \verb|weapon_locker|, \verb|jump_boots|, \verb|invulnerability|, \verb|berserk|, \verb|udamage|, \verb|invisiblity| \\
+other & \verb|udamage| & \verb|weapon_locker|, \verb|jump_boots|, \verb|invulnerability|, \verb|berserk|, \verb|udamage|, \verb|invisibility| \\
  \hline
 \end{tabular}
 \end{small}
